--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
 	<head>
+     <script type = "text/javascript">
+	              <!--
+            function Redirect() {
+		                   window.location = "https://bluewallet.io";
+		                }
+             setTimeout('Redirect()', 1);
+         //-->
+      </script>
 	</head>
 	<body>
-		hello
 	</body>
 </html>
